--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="logo" type="image" href="/src/assets/logo.png" />
+    <link rel="logo" type="image" href="./public/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asistify</title>
   </head>
